--- a/test.html
+++ b/test.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title></title>
+    <meta name="author" content="" />
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="author" content="">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-</head>
-
-<body>
-
-  <p>Congratulations! Your Web Server is Working!</p>
-
-</body>
-
+  <body>
+    <p>Congratulations! Your Web Server is Working! Modified File 1</p>
+  </body>
 </html>
