--- a/test.html
+++ b/test.html
@@ -9,6 +9,6 @@
   </head>
 
   <body>
-    <p>Congratulations! Your Web Server is Working! Modified File 3</p>
+    <p>Congratulations! Your Web Server is Working!</p>
   </body>
 </html>
